refatorando o codigo pra comecar a aula

--- a/mostra e esconde/index.html
+++ b/mostra e esconde/index.html
@@ -59,9 +59,9 @@
       </div>
     </div>
     <div class="flex justify-end p-2 gap-4">
-      <button id="btnCancelar" class="w-24 py-2 text-red-600 hover:bg-red-100 hover:text-red-800 rounded-md">Cancelar</button>
-      <button id="btnEditar" class="w-24 py-2 bg-green-600 text-white rounded-md hover:bg-green-700 hidden">Editar</button>
-      <button id="btnSalvar" class="w-24 py-2 bg-green-600 text-white rounded-md hover:bg-green-700 hidden">Salvar</button>
+      <button id="btnCancelar" class="w-24 py-2 text-red-600 hover:bg-red-100 hover:text-red-800 rounded-md focus:ring focus:ring-red-200 focus:outline-none">Cancelar</button>
+      <button id="btnEditar" class="w-24 py-2 bg-green-600 text-white rounded-md hover:bg-green-700 hidden focus:ring focus:ring-green-200 focus:outline-none">Editar</button>
+      <button id="btnSalvar" class="w-24 py-2 bg-green-600 text-white rounded-md hover:bg-green-700 hidden focus:ring focus:ring-green-200 focus:outline-none">Salvar</button>
     </div>
   </dialog>
 </body>
