--- a/mostra e esconde/index.html
+++ b/mostra e esconde/index.html
@@ -16,7 +16,7 @@
     <h1>Controle de Estoque</h1>
     <div>
       <div id="divInput">
-        <button>
+        <button class="focus:ring focus:outline-none">
           <span class="material-symbols-outlined">add</span>
         </button>
       </div>
@@ -38,15 +38,17 @@
         <input
           class="mt-1 py-3 px-4 border border-slate-300 rounded-md hover:border-blue-400 focus:ring focus:border-blue-400 focus:outline-none"
           id="inpQntd" type="text">
-        <p class="pt-0.5 text-red-600 text-sm hidden">* Campo Obrigatório</p>
+        <p class="pt-0.5 text-red-600 text-sm hidden"></p>
       </div>
     </div>
     <div class="flex gap-4 px-6">
       <div class="flex flex-col grow gap-1">
         <label for="inpUn">Unidade</label>
-        <input
+        <select
           class="mt-1 py-3 px-4 border border-slate-300 rounded-md hover:border-blue-400 focus:ring focus:border-blue-400 focus:outline-none"
-          id="inpUn" type="text">
+          id="selectUn">
+          <option value="-1" selected hidden>Escolher...</option>
+        </select>
         <p class="pt-0.5 text-red-600 text-sm hidden">* Campo Obrigatório</p>
       </div>
 
@@ -55,7 +57,7 @@
         <input
           class="mt-1 py-3 px-4 border border-slate-300 rounded-md hover:border-blue-400 focus:ring focus:border-blue-400 focus:outline-none"
           id="inpPreco" type="text">
-        <p class="pt-0.5 text-red-600 text-sm hidden">* Campo Obrigatório</p>
+        <p class="pt-0.5 text-red-600 text-sm hidden"></p>
       </div>
     </div>
     <div class="flex justify-end p-2 gap-4">
